[package]
name = "synclinal"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
geo-types = "0.7"
image = "0.25"
reqwest = { version = "0.13", features = ["json", "form"] }
resvg = "0.47"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
